tests/snapshots/examples_fixtures/type_system__TypeSystem__BoundaryCtor.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/BoundaryCtor.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `TypeSystem.BoundaryCtor` doesn't match file path `//?/examples/type_system/TypeSystem/BoundaryCtor.flx`.

  examples/type_system/TypeSystem/BoundaryCtor.flx:1:1
  |
1 | module TypeSystem.BoundaryCtor {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
